--- a/pom.xml
+++ b/pom.xml
@@ -35,21 +35,27 @@
             <artifactId>swing-layout</artifactId>
             <version>1.0.3</version>
         </dependency>
+        
+      
+        
     </dependencies>
-  <!--  <build>
+   <build>
         <plugins>
-              
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-         
-            <plugin>
+           <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+            
+            
+                
+            
+    
+       <!--    <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
@@ -67,7 +73,7 @@
             </plugin>
 
         
-            <plugin>
+         <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.5.1</version>
@@ -85,7 +91,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin> 
         
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -109,7 +115,7 @@
                     </execution>
                 </executions>
             </plugin>
-            
+            -->
         </plugins>
-    </build> -->
-</project>
+    </build>
+   </project>
